--- a/environmet.yml
+++ b/environmet.yml
@@ -1,4 +1,4 @@
-name: tf
+name: tps_june
 channels:
   - intel
   - defaults
@@ -506,4 +506,4 @@ dependencies:
   - zstd=1.4.5=h3f200d0_0
   - pip:
     - jupyterlab-code-formatter==1.4.11
-prefix: /opt/myintel/intelpython/latest/envs/tf
+prefix: /opt/myintel/intelpython/latest/envs/tps_june
