--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 /scripts/cooked.pkl filter=lfs diff=lfs merge=lfs -text
 /scripts/cooked_sparsely.pkl filter=lfs diff=lfs merge=lfs -text
 /scripts/data.csv filter=lfs diff=lfs merge=lfs -text
+/notebooks/cooked.pkl filter=lfs diff=lfs merge=lfs -text
